fix locale plugin names

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -9,6 +9,8 @@ en:
         title: People
       registrations:
         title: Registrations
+      refinerycms-registrations:
+        title: Registrations
     race_registrations:
       admin:
         submenu:
