--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -9,6 +9,8 @@ nl:
         title: People
       registrations:
         title: Registrations
+      refinerycms-registrations:
+        title: Registrations
     race_registrations:
       admin:
         submenu:
