--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -119,6 +119,7 @@ fr:
       refinery/race_registrations/category:
         title: Title
       refinery/race_registrations/person:
+        num: Num
         id: ID
         name: Name
         surname: Surname
