--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -121,6 +121,7 @@ es:
       refinery/race_registrations/category:
         title: Title
       refinery/race_registrations/person:
+        num: Num
         id: ID
         name: Name
         surname: Surname
